# gadisewa

backend/: .gitignore  README.md  manage.py  pyproject.toml
backend/apps/garages/: apps.py  factories.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/apps/garages/migrations/: 0001_initial.py
backend/apps/inventory/: models.py  schemas.py  serializers.py  urls.py  views.py
backend/apps/invoices/: models.py
backend/apps/tenants/: middleware.py  mixins.py  models.py  permissions.py  utils.py  viewsets.py
backend/apps/users/: authentication.py  backends.py  models.py  pagination.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/gadisewa/: asgi.py  settings.py  urls.py  wsgi.py
backend/shared/: exceptions.py  models.py  response_wrappers.py  validators.py  views.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ToastContext.tsx  main.tsx
frontend/src/components/: ErrorMessage.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Appointments.tsx  CreateJob.tsx  Customers.tsx  Dashboard.tsx  Expenses.tsx  Financials.tsx  Forbidden.tsx  Inventory.tsx  Invoices.tsx  JobBoard.tsx  JobDetails.tsx  Login.tsx  Marketing.tsx  NotFound.tsx  POS.tsx  Registration.tsx  Reports.tsx  Settings.tsx  Staff.tsx
frontend/src/schemas/: appointments.schema.ts  auth.schema.ts  garages.schema.ts  regex.ts  (+3 more)
(+12 files in other folders)
